# json-streams-rs

./: Cargo.toml  README.md  data.jsonl
data/: persons.json  persons.jsonl  test.json  test.jsonl
examples/: converter.rs
src/: json_iter.rs  json_lines.rs  json_value.rs  lib.rs  main.rs
src/json_lines/: mod.rs  nom_json_lines.rs  serde_json_lines.rs
src/parsers/: streaming.rs
tests/: json_iter.rs  json_lines.rs  nom_json_lines.rs  serde_json_lines.rs
